Kubernetes/backend/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: microservices
  name: translation-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: translation-microservice
  template:
    metadata:
      namespace: microservices
      labels:
        app: translation-microservice
    spec:
      containers:
        - name: translation-microservice
          image: tkrikoriam/translation-microservice:v36
          ports:
            - containerPort: 80
